profiling-using-exp-runner/backup_FINAL_RESULTS/knapsack_experiment/run_6_repetition_0/energibridge.log
sampling interval: 200, target function: knapsack, input size: ((1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49), (5, 20, 35, 50, 65, 80, 95, 110, 125, 140, 155, 170, 185, 200, 215, 230, 245, 260, 275, 290, 305, 320, 335, 350, 365), 100)
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import memory.knapsack as module; weights = (1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49); values = (5, 20, 35, 50, 65, 80, 95, 110, 125, 140, 155, 170, 185, 200, 215, 230, 245, 260, 275, 290, 305, 320, 335, 350, 365); capacity = 100; module.knapsack(weights, values, capacity); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 7.4719870758056635 for 0.236427 sec of execution.
